tests/endpoint_compile_fail/stringly_param.stderr
error[E0599]: no method named `param` found for struct `EndpointRequestBuilder<'a, E, S>` in the current scope
 --> $WORKSPACE/tests/endpoint_compile_fail/stringly_param.rs
  |
  |     let _ = client.call::<GetTodo>().param("id", 1);
  |                                      ^^^^^
  |
help: there is a method `params` with a similar name, but with different arguments
 --> src/endpoint.rs
  |
  |     pub fn params(self, params: E::Params) -> EndpointRequestBuilder<'a, E, Ready> {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
